--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.DS_Store
+_book
+todo.txt
+*.pdf
+*.epub
+*.mobi
+deploy.sh
+node_modules
+code/sandbox/
+sandbox.go
+sandbox*.go
+tmp/
+build/
 
-# Test binary, built with `go test -c`
-*.test
+.ecrecover.go
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Local Netlify folder
+.netlify
